2007-07-02  Hynek Hanke  <hanke@syrr.buchal.name>

	* speechd/_test.py: Voice list test uncommented.

2007-06-26  Tomas Cerha  <cerha@brailcom.org>

	* speechd/_test.py (VoiceTest.test_lists): New test.

	* speechd/client.py (SSIPClient.list_output_modules)
	(SSIPClient.list_synthesis_voices, SSIPClient.set_output_module)
	(SSIPClient.set_synthesis_voice): New methods.

2007-05-03  Hynek Hanke  <hanke@brailcom.org>

	* Makefile (clean): Remove build.

2007-02-21  Tomas Cerha  <cerha@brailcom.org>

	* speechd/_test.py (AutomaticTest.test_callbacks): Added warning.

2007-02-17  Hynek Hanke  <hanke@brailcom.org>

	* speechd/_test.py (AutomaticTest.test_callbacks): Removed comment
	about Scope.SELF not working.
	Added TODO comment about fixing this test.

2007-02-05  Tomas Cerha  <cerha@brailcom.org>

	* speechd/client.py (_SSIP_Connection.__init__): Thread name
	changed.
	(SSIPClient.__init__): Allocate lock.
	(SSIPClient._callback_handler): Lock before accessing
	`self._callbacks'.
	(SSIPClient.speak): Added more doc.  Lock before accessing
	`self._callbacks'.

2007-01-29  Tomas Cerha  <cerha@brailcom.org>

	* speechd/client.py (SSIPClient._callback_handler)
	(SSIPClient.speak): Removed prints.

	* speechd/_test.py (SSIPClientTest.check_callbacks): Wait for
	callbacks after canceling messages.
	(TestSuite): Class removed.
	(tests): Instance removed.
	(SSIPClientTest): Class split into `AutomaticTest' and `VoiceTest'.
	(_SSIPClientTest, AutomaticTest, VoiceTest): New classes.
	(SpeakerTest): Class removed.
	(get_tests): Function removed.

2007-01-26  Tomas Cerha  <cerha@brailcom.org>

	* speechd/_test.py (SSIPClientTest.check_callbacks): New test.
	(SSIPClientTest.check_notification): Temporarily commented out.

	* speechd/client.py
	(_SSIP_Connection._CALLBACK_TYPE_MAP): New constant.
	(_SSIP_Connection.__init__): Initialize `self._callback' instead
	of `self._callbacks'.
	(_SSIP_Connection._communication): Docstring reformatted.  The